@@ -1,3 +1,6 @@
+2012-08-04  Kirit Saelensminde  <kirit@felspar.com>
+ Deliberately leak the thread counter so that it can't be destructed before threads that are terminating in a global destructor get run.
+
 2012-08-03  Kirit Saelensminde  <kirit@felspar.com>
  Added instrumentation for the number of worker threads in use. Also added decrement to the counter implementation.
  Fixed a bug on Windows where the pre-increment would return the old value rather than the new one.
